fix: rename --skin-color-link to --skin-color-primary-contrast-safe and use where appropriate

--- a/src/components/agencySelection/agencySelection.styles.scss
+++ b/src/components/agencySelection/agencySelection.styles.scss
@@ -49,7 +49,7 @@ $infoIconSize: 16px;
 
 		&--warning {
 			.text__infoSmall {
-				color: var(--skin-color-primary, $primary);
+				color: var(--skin-color-primary-contrast-safe, $primary);
 			}
 
 			a {
